# chordflow

./: CLAUDE.md  Cargo.toml  Cross.toml  README.md  justfile
.github/actions/: release.yaml
.github/workflows/: build.yaml  release.yaml  release.yml
chordflow_audio/: Cargo.toml
chordflow_audio/src/: audio.rs
chordflow_desktop/: Cargo.toml  Dioxus.toml  input.css  package-lock.json  package.json  tailwind.config.js
chordflow_desktop/.serena/: project.yml
chordflow_desktop/assets/: main.css  tailwind.css
chordflow_desktop/icons/: AppIcon.icns
chordflow_desktop/src/: bottom_zone.rs  center_stage.rs  components.rs  main.rs  state.rs  top_zone.rs  ui.rs
chordflow_desktop/src/audio/: config.rs  mod.rs  settings.rs  state.rs  stream.rs
chordflow_desktop/src/bottom_zone/: controls.rs  layout.rs  mode_selector.rs  quality.rs
chordflow_desktop/src/center_stage/: current_chord.rs  layout.rs  next_chord.rs
chordflow_desktop/src/components/: buttons.rs  config_state.rs  echo.rs  header.rs  hero.rs  metronome.rs  metronome_settings.rs  mode_selection.rs  navbar.rs  play_controls.rs  practice_state.rs  settings_panel.rs
chordflow_desktop/src/hooks/: use_metronome.rs
chordflow_desktop/src/state/: config.rs  diatonic.rs  events.rs  fourths.rs  lib.rs  metronome.rs  mode.rs  modes.rs  options.rs  practice.rs  progression.rs
chordflow_desktop/src/top_zone/: bar_counter.rs  beat_fraction.rs  beat_viz.rs  bpm_control.rs  layout.rs
chordflow_desktop/src/ui/: app.rs  bottom_zone.rs  center_stage.rs  hooks.rs  menu_bar.rs  top_zone.rs
chordflow_desktop/src/ui/bottom_zone/: controls.rs  diatonic.rs  fourths.rs  layout.rs  mode_selector.rs  progression.rs  quality.rs
chordflow_desktop/src/ui/center_stage/: current_chord.rs  layout.rs  next_chord.rs
chordflow_desktop/src/ui/components/: config_state.rs  metronome.rs  metronome_settings.rs  mode_selection.rs  play_controls.rs  practice_state.rs
chordflow_desktop/src/ui/hooks/: use_metronome.rs
chordflow_desktop/src/ui/menu_bar/: layout.rs  mode_selector.rs
chordflow_desktop/src/ui/top_zone/: bar_counter.rs  beat_fraction.rs  beat_viz.rs  bpm_control.rs  layout.rs  play_control.rs  subdivision_selector.rs
chordflow_desktop/src/views/: blog.rs
chordflow_music_theory/: Cargo.toml
chordflow_music_theory/src/: accidental.rs  interval.rs  lib.rs  note.rs  quality.rs  scale.rs  util.rs
chordflow_shared/: Cargo.toml
chordflow_shared/src/: cli.rs  lib.rs  metronome.rs  mode.rs  practice_state.rs  progression.rs
chordflow_tui/: Cargo.toml
chordflow_tui/src/: keymap.rs  main.rs  ui.rs
icons/macos/: AppIcon.icns
src/: app.rs  audio.rs  keymap.rs  main.rs  metronome.rs  mode.rs  music.rs  practice_state.rs  progression.rs  timer.rs  tui.rs  ui.rs
src/music/: chord.rs  quality.rs  scale.rs
