[package]
name = "chordflow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
figlet-rs = "0.1.5"
fluidlite = { version = "0.2.1", features = ["bindgen"] }
itertools = "0.14.0"
midly = "0.5.3"
rand = "0.9.0"
ratatui = "0.29.0"
regex = "1.11.1"
rodio = "0.20.1"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = "0.27.0"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
