[workspace]
members = [
    "chordflow_audio",
    "chordflow_desktop",
    "chordflow_music_theory",
    "chordflow_shared",
    # "chordflow_tui",
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


[bundle]
resources = ["assets/*"]
