[package]
name = "chordflow_desktop"
version = "0.1.0"
authors = ["Tim van Cann <timvancann@gmail.com>"]
edition = "2021"


[dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
chordflow_shared = {path = "../chordflow_shared/"}
chordflow_audio = {path = "../chordflow_audio/"}
chordflow_music_theory = {path = "../chordflow_music_theory/"}
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = "0.27.0"
tokio = "1.43.0"
dioxus-free-icons = { version = "0.9.0", features = ["hero-icons-solid", "font-awesome-solid", "ionicons"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
