[package]
name = "chordflow_desktop"
version = "0.5.2"
authors = ["Tim van Cann <timvancann@gmail.com>"]
edition = "2021"
default-run = "chordflow_desktop"


[dependencies]
anyhow = "1.0.95"
atomic_float = "1.1"
chordflow_music_theory = {path = "../chordflow_music_theory/"}
chordparser = "4.0.4"
clap = { version = "4.5.27", features = ["derive"] }
cpal = "0.15.3"
crossbeam-channel = "0.5.15"
dioxus = { version = "0.7.2", features = ["router", "desktop"] }
dioxus-free-icons = { version = "0.10.0", features = ["hero-icons-solid", "font-awesome-solid", "ionicons", "lucide"] }
dioxus-liveview = "0.7.2"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.25"
log4rs = { version = "1.3.0", features = ["file_appender"] }
midly = "0.5.3"
parking_lot = "0.12"
rand = "0.9.0"
regex = "1.11.1"
rtrb = "0.3.2"
rustysynth = "1.3"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
