[package]
name = "chordflow_shared"
version = "0.3.2"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chordflow_music_theory = {path = "../chordflow_music_theory/"}
clap = { version = "4.5.27", features = ["derive"] }
crossbeam-channel = "0.5.15"
futures = "0.3.31"
rand = "0.9.0"
regex = "1.11.1"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
