[package]
name = "chordflow_tui"
version = "0.1.0"
edition = "2021"

[dependencies]

chordflow_shared = {path = "../chordflow_shared/"}
chordflow_audio = {path = "../chordflow_audio/"}
chordflow_music_theory = {path = "../chordflow_music_theory/"}

anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
figlet-rs = "0.1.5"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = "0.27.0"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
