[package]
name = "chordflow_tui"
version = "0.3.2"
edition = "2021"

[dependencies]

chordflow_shared = {path = "../chordflow_shared/"}
chordflow_audio = {path = "../chordflow_audio/"}
chordflow_music_theory = {path = "../chordflow_music_theory/"}

anyhow = "1.0.95"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
figlet-rs = "0.1.5"
futures = "0.3.31"
log = "0.4.25"
log4rs = { version = "1.3.0", features = ["file_appender"] }
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = "0.27.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
